# us-game-forge-v2

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: ci-backend.yml  ci-frontend.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  preferences.md
.specify/workflows/: workflow-registry.json
apps/forge/: README.md  angular.json  package.json
apps/forge-api/: pyproject.toml
apps/forge-api/src/forge_api/: dependencies.py  main.py
apps/forge-api/src/forge_api/routers/: battles.py  configurations.py
apps/forge/src/: styles.scss
apps/forge/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
apps/forge/src/app/application/dtos/: battle.dto.ts
docs/: architecture.md  forge_design.md  game_design.md
specs/001-sqlmodel-persistence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-sqlmodel-persistence/checklists/: requirements.md
specs/001-sqlmodel-persistence/contracts/: repository-contracts.md
specs/002-player-state/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-player-state/checklists/: requirements.md
specs/002-player-state/contracts/: repository-contracts.md
specs/003-rename-hero-mercenary/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rename-hero-mercenary/checklists/: requirements.md
(+32 files in other folders)
