[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-api"
version = "0.1.0"
description = "Game Forge API — FastAPI delivery layer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "forge-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/forge_api"]

[tool.uv.sources]
forge-core = { path = "../../packages/forge-core" }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
